tests/baselines/reference/moduleResolutionWithExtensions_unexpected2.errors.txt
/a.ts(1,8): error TS2307: Cannot find module 'foo' or its corresponding type declarations.


==== /a.ts (1 errors) ====
    import "foo";
           ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    
==== /node_modules/foo/foo.js (0 errors) ====
    This file is not read.
    
==== /node_modules/foo/package.json (0 errors) ====
    { "types": "foo.js" }
    